  - new method update() : substitute for modify()
  - method modify() deprecated
- MathExpression:
  - constructor mathexpression throws additionaly a SubException<MathExpression::DefinitionError,MathExpression> 

v1.97:
- MathExpression:
  - changed method-signature:
    The methods "print" and "toString" expect a parameter defining the display-precision of post decimals.
  - if the upper bound of a Sum or a Prod is less then the startvalue 0 is returned

v1.98:
- Graphable:
  - find_scc() got the optional parameter construct_scc_graph. If set to true, find_scc() will construct the scc-graph (which is a dag)
    besides determining the components. The return-value of find_scc() has been changed to SCCGraph * .
  - for this purpose two new classes have been designed:
	SCCGraph and SCCGraphComponent
- BitMatrix:
  - two functions added: toString() and show()

- MathExpression:
  - added static function builtinsToString()

- renamed Exception_T to ExceptionBase

v1.99:
- ExceptionBase:
  - removed methods getMsgCharPtr() and getIdMsgCharPtr()

- MathExpression:
  - more sophisticated error-output
  - added class ParserException, removed SubExcepion<SyntaxErr,MathExpression> and SubException<DefinitionError,MathExpression>

v2.0:
- class MemBlock removed: unnecessary for MemPointer uses MemPointer instead
- Buffer<T>:
  - changed methodnames:
    blocks() -> getBlocks()
    elements() -> getElements()
  - returntype of merge() changed from MemPointer<T> to T * .
  - added function get()
  - merge() will clear the buffer so it will go to initial state
- MemPointer<T>:
  new Constructor which will allocate a memory-area

v2.1:
- class ExceptionBase:
  - now directly derives from exception
  - added method prependMsg()
- class CmdlParser
  - added supervisors
- class String
  - changed returntype of trunc() from string to String
  - new methods: toLower(), toUpper() etc.
  - +-operator overloaded for concatenating the basic types
- renamed namespace util to utils